# Tachistostory

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEPRECATION_NOTICE.md  FAQ.md  FAQ_EN.md  LICENSE.md  LICENSE_EN.md  Makefile  README.it.md  README.md  README_EN.md  REFACTORING_LOG.md  STATO_VARIABILI_ANALISI.md  Tachistostory.spec  build_nuitka.py  game.py  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: build-binaries.yml  build.yml  ci.yml
MAC APP/Tachistostory.app/Contents/: Info.plist
MAC APP/Tachistostory/_internal/assets/: tachistostory.icns
build_icons/tachistostory_icon/: tachistostory_icon.icns
src/: __init__.py
src/core/: GameContext.py  __init__.py  asset_manager.py  config.py  enums.py  fade_controller.py  form_manager.py  form_state.py  layout_manager.py  music_manager.py  session_controller.py  state_machine.py  window_manager.py  word_manager.py
src/loaders/: __init__.py  file_loader.py
src/logging/: session_logger.py
src/states/: __init__.py  base_state.py  csv_state.py  file_selection_state.py  instruction_state.py  intro_book_idle_state.py  intro_book_open_state.py  intro_table_state.py  menu_start_state.py  participant_form_state.py  presentation_state.py
src/utils/: __init__.py  images.py  paths.py  text.py
tests/: test_session_logger.py
