[project]
name = "tachistostory"
version = "0.1.0"
description = "A tachistostoscopy application to improve read"
authors = [
    {name = "Daniele Maurilli",email = "maurillidaniele@gmail.com"}
]
license = {text = "Custom-License"}
readme = "README.md"
requires-python = ">=3.10,<=3.13.9"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "pyinstaller (>=6.17.0,<7.0.0)",
    "pyinstaller-hooks-contrib (>=2025.10,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
